{{$NEXT}}

2.004     2017-11-11 16:17:27 EST
  - Add dequeue_interval attribute and check for jobs in 0.5 second intervals
    by default. (#10)

2.003     2017-08-07 16:04:18 EDT
  - Fix tests for rethrown job exceptions in Minion 7.05.

2.002     2017-08-05 12:01:08 EDT
  - Add id option to dequeue method to support dequeueing a specific job.
  - Add attempts option to retry_job method.

2.001     2017-07-20 02:40:46 EDT
  - Bump Mojo::SQLite requirement to 3.000 to support sharing the database
    connection cache with existing Mojo::SQLite objects.

2.000     2017-06-26 00:42:49 EDT
  - Add support for rate limiting and unique jobs with lock and unlock methods.
  - Add support for job metadata with note method, notes option for enqueue
    method, and notes field in job_info method.

1.000     2017-04-14 14:54:28 EDT
  - Support retrying active jobs in retry_job.
  - Support sharing worker status information in register_worker and
    worker_info.

0.009     2016-12-19 20:34:58 EST
  - Increase dependency on Mojo::SQLite for memory leak fix

0.008     2016-12-16 22:36:53 EST
  - Correct ordering of dequeued jobs that are created in the same second.

0.007     2016-09-19 20:30:32 EDT
  - Add support for worker remote control commands with broadcast and receive
    methods.
  - Fix tests for compatibility with Minion 6.0.

0.006     2016-09-06 23:22:20 EDT
  - Add support for EXPERIMENTAL enqueued_jobs field in stats method.

0.005     2016-07-02 20:46:32 EDT
  - Add support for EXPERIMENTAL delayed_jobs field in stats method.
  - Add queue option to list_jobs method.
  - Add support for job dependencies.
  - Add parents option to enqueue method.
  - Add children and parents fields to job_info method.

0.004     2016-03-16 21:52:15 EDT
  - Bump Mojo::SQLite dependency to 0.020 for JSON1 support
  - Use JSON1 fields for job args and result
  - Use new Mojo::SQLite auto_migrate feature
  - Various optimizations from Minion::Backend::Pg including much faster dequeue