@@ -46,14 +46,16 @@ is $worker2->info->{jobs}[0], $job->id, 'right id';
 $id = $worker2->id;
 undef $worker2;
 is $job->info->{state}, 'active', 'job is still active';
-ok !!$minion->backend->worker_info($id), 'is registered';
+ok !!$minion->backend->list_workers(0, 1, {ids => [$id]})->{workers}[0],
+  'is registered';
 $minion->backend->sqlite->db->query(
   q{update minion_workers
     set notified = datetime('now', '-' || ? || ' seconds') where id = ?},
   $minion->missing_after + 1, $id
 );
 $minion->repair;
-ok !$minion->backend->worker_info($id), 'not registered';
+ok !$minion->backend->list_workers(0, 1, {ids => [$id]})->{workers}[0],
+  'not registered';
 like $job->info->{finished}, qr/^[\d.]+$/,       'has finished timestamp';
 is $job->info->{state},      'failed',           'job is no longer active';
 is $job->info->{result},     'Worker went away', 'right result';
@@ -99,7 +101,9 @@ ok !$minion->job($id3), 'job has been cleaned up';
 # List workers
 $worker = $minion->worker->register;
 $worker2 = $minion->worker->status({whatever => 'works!'})->register;
-my $batch = $minion->backend->list_workers(0, 10);
+my $results = $minion->backend->list_workers(0, 10);
+is $results->{total}, 2, 'two workers total';
+my $batch = $results->{workers};
 ok $batch->[0]{id},        'has id';
 is $batch->[0]{host},      $host, 'right host';
 is $batch->[0]{pid},       $$, 'right pid';
@@ -107,14 +111,16 @@ like $batch->[0]{started}, qr/^[\d.]+$/, 'has timestamp';
 is $batch->[1]{host},      $host, 'right host';
 is $batch->[1]{pid},       $$, 'right pid';
 ok !$batch->[2], 'no more results';
-$batch = $minion->backend->list_workers(0, 1);
+$results = $minion->backend->list_workers(0, 1);
+$batch = $results->{workers};
+is $results->{total}, 2, 'two workers total';
 is $batch->[0]{id}, $worker2->id, 'right id';
 is_deeply $batch->[0]{status}, {whatever => 'works!'}, 'right status';
 ok !$batch->[1], 'no more results';
 $worker2->status({whatever => 'works too!'})->register;
-$batch = $minion->backend->list_workers(0, 1);
+$batch = $minion->backend->list_workers(0, 1)->{workers};
 is_deeply $batch->[0]{status}, {whatever => 'works too!'}, 'right status';
-$batch = $minion->backend->list_workers(1, 1);
+$batch = $minion->backend->list_workers(1, 1)->{workers};
 is $batch->[0]{id}, $worker->id, 'right id';
 ok !$batch->[1], 'no more results';
 $worker->unregister;
@@ -183,6 +189,7 @@ is $stats->{failed_jobs},      0, 'no failed jobs';
 is $stats->{finished_jobs},    0, 'no finished jobs';
 is $stats->{inactive_jobs},    0, 'no inactive jobs';
 is $stats->{delayed_jobs},     0, 'no delayed jobs';
+is $stats->{uptime}, undef, 'uptime is undefined';
 $worker = $minion->worker->register;
 is $minion->stats->{inactive_workers}, 1, 'one inactive worker';
 $minion->enqueue('fail');
@@ -221,8 +228,10 @@ is $stats->{inactive_jobs},    0, 'no inactive jobs';
 is $stats->{delayed_jobs},     0, 'no delayed jobs';
 
 # List jobs
-$id = $minion->enqueue('add');
-$batch = $minion->backend->list_jobs(0, 10);
+$id      = $minion->enqueue('add');
+$results = $minion->backend->list_jobs(0, 10);
+$batch   = $results->{jobs};
+is $results->{total}, 4, 'four jobs total';
 ok $batch->[0]{id},        'has id';
 is $batch->[0]{task},      'add', 'right task';
 is $batch->[0]{state},     'inactive', 'right state';
@@ -249,27 +258,30 @@ is $batch->[3]{task},       'fail',       'right task';
 is $batch->[3]{state},      'finished',   'right state';
 is $batch->[3]{retries},    0,            'job has not been retried';
 ok !$batch->[4], 'no more results';
-$batch = $minion->backend->list_jobs(0, 10, {state => 'inactive'});
+$batch = $minion->backend->list_jobs(0, 10, {state => 'inactive'})->{jobs};
 is $batch->[0]{state},   'inactive', 'right state';
 is $batch->[0]{retries}, 0,          'job has not been retried';
 ok !$batch->[1], 'no more results';
-$batch = $minion->backend->list_jobs(0, 10, {task => 'add'});
+$batch = $minion->backend->list_jobs(0, 10, {task => 'add'})->{jobs};
 is $batch->[0]{task},    'add', 'right task';
 is $batch->[0]{retries}, 0,     'job has not been retried';
 ok !$batch->[1], 'no more results';
-$batch = $minion->backend->list_jobs(0, 10, {queue => 'default'});
+$batch = $minion->backend->list_jobs(0, 10, {queue => 'default'})->{jobs};
 is $batch->[0]{queue}, 'default', 'right queue';
 is $batch->[1]{queue}, 'default', 'right queue';
 is $batch->[2]{queue}, 'default', 'right queue';
 is $batch->[3]{queue}, 'default', 'right queue';
 ok !$batch->[4], 'no more results';
-$batch = $minion->backend->list_jobs(0, 10, {queue => 'does_not_exist'});
+$batch
+  = $minion->backend->list_jobs(0, 10, {queue => 'does_not_exist'})->{jobs};
 is_deeply $batch, [], 'no results';
-$batch = $minion->backend->list_jobs(0, 1);
+$results = $minion->backend->list_jobs(0, 1);
+$batch = $results->{jobs};
+is $results->{total}, 4, 'four jobs total';
 is $batch->[0]{state},   'inactive', 'right state';
 is $batch->[0]{retries}, 0,          'job has not been retried';
 ok !$batch->[1], 'no more results';
-$batch = $minion->backend->list_jobs(1, 1);
+$batch = $minion->backend->list_jobs(1, 1)->{jobs};
 is $batch->[0]{state},   'finished', 'right state';
 is $batch->[0]{retries}, 1,          'job has been retried';
 ok !$batch->[1], 'no more results';
@@ -295,7 +307,8 @@ is $job->info->{state}, 'active', 'right state';
 is $job->task,    'add', 'right task';
 is $job->retries, 0,     'job has not been retried';
 $id = $job->info->{worker};
-is $minion->backend->worker_info($id)->{pid}, $$, 'right worker';
+is $minion->backend->list_workers(0, 1, {ids => [$id]})->{workers}[0]{pid}, $$,
+  'right worker';
 ok !$job->info->{finished}, 'no finished timestamp';
 $job->perform;
 is $worker->info->{jobs}[0], undef, 'no jobs';
@@ -682,7 +695,6 @@ is $minion->repair->stats->{finished_jobs}, 0, 'no finished jobs';
 $id  = $minion->enqueue('test');
 $id2 = $minion->enqueue('test');
 $id3 = $minion->enqueue(test => [] => {parents => [$id, $id2]});
-is $minion->stats->{delayed_jobs}, 1, 'one delayed job';
 $job = $worker->dequeue(0);
 is $job->id, $id, 'right id';
 is_deeply $job->info->{children}, [$id3], 'right children';
@@ -746,7 +758,8 @@ eval { $minion->foreground($id) };
 like $@, qr/Intentional failure!/, 'right error';
 $info = $minion->job($id)->info;
 ok $info->{worker}, 'has worker';
-ok !$minion->backend->worker_info($info->{worker}), 'not registered';
+ok !$minion->backend->list_workers(0, 1, {ids => [$info->{worker}]})
+  ->{workers}[0], 'not registered';
 is $info->{retries}, 1,                        'job has been retried';
 is $info->{state},   'failed',                 'right state';
 is $info->{queue},   'minion_foreground',      'right queue';
